@@ -8,7 +8,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 public class FileHandler {
-    private InvertedIndex invertedIndex;
+    private final InvertedIndex invertedIndex;
     private final List<File> files = new ArrayList<>();
 
     public FileHandler(InvertedIndex invertedIndex) {
@@ -18,15 +18,13 @@ public class FileHandler {
     public String readByLines(File file) throws IOException {
         Scanner scanner = new Scanner(file);
         StringBuilder builder = new StringBuilder();
-
         while (scanner.hasNextLine()) {
             builder.append(scanner.nextLine());
         }
-
         return builder.toString();
     }
 
-    public void scanDirectory(File directory) throws IOException {
+    public void scanDirectory(File directory) {
         if (directory.isDirectory()) {
             File[] files = directory.listFiles();
             for (File file : Objects.requireNonNull(files)) {
@@ -40,7 +38,7 @@ public class FileHandler {
     public void readFileContent(File file) throws IOException {
         String readFile = readByLines(file);
         String[] splited = readFile.split("\\W");
-        List<String> cleanList = Arrays.stream(splited).filter(str -> !str.isEmpty()).collect(Collectors.toList());
+        List<String> cleanList = Arrays.stream(splited).filter(str -> !str.isEmpty()).toList();
         for (String word : cleanList) {
             invertedIndex.pushToVocabulary(word.toLowerCase(), file.toString());
         }
